# chubby

./: CMakeLists.txt  README.md
proto/: raft.proto
src/: main.cpp
thinking/: paper-notes.txt  todo.txt
